ZumZumFinancials_Dev1/src/objects/Invoice_Template__c.object
<CustomObject>
    <fields>
        <fullName>Font_Face__c</fullName>
        <label>Font Face</label>
        <picklist>
            <picklistValues>
                <fullName>Arial</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Times New Roman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verdana</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Font_Size__c</fullName>
        <label>Font Size</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Footer_Text__c</fullName>
        <label>Footer Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Heading_Text__c</fullName>
        <defaultValue>&quot;Invoice Heading&quot;</defaultValue>
        <label>Heading Text</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Margins_left_right_Inches__c</fullName>
        <defaultValue>1.5</defaultValue>
        <label>Margins (left/right) - Inches</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Margins_top_bottom__c</fullName>
        <defaultValue>1.5</defaultValue>
        <label>Margins (top/bottom) - Inches</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>Invoice Template</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Invoice Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Template</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>